# demo_iot_connect

./: .gitignore  Pipfile  README.md  setup.cfg  tox.ini
demo_iot_connect/: __init__.py  cmdline.py  config.py  log.py  settings.yaml
demo_iot_connect/api/: __init__.py
demo_iot_connect/socket_server/: app.py  constants.py  routing.py  server.py  typing.py  utils.py
demo_iot_connect/socket_server/protocols/: __init__.py  asgi_protocol.py  common.py  framing.py  message.py  schemas.py  socket_protocol.py
tests/: conftest.py
tests/socket_server/: test_app.py  test_routing.py  test_server.py
