[metadata]
name = demo_iot_connect
version = attr: demo_iot_connect.__version__
author = kevin
email = huagang517@126.com
description = demo iot connect
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7

[options]
zip_save = false
packages = find:
include_package_data = true
install_requires =
    dynaconf
    pyzmq

[options.packages.find]
exclude =
    tests*
    docs
    static
    log

[options.entry_points]
console_scripts =
    server = demo_iot_connect.cmdline:main

[flake8]
max-line-length = 120
ignore =
    F541,
exclude =
    .git,
    .tox,
    __pycache__,
    venv,
    build,
    dist,
    docs,

[tool:pytest]
testpaths = tests
python_files = tests.py test_*.py *_tests.py
markers =
    integration: Integration test

[coverage:report]
show_missing = True
omit =
    */.tox/*
    */site-packages/*
    */distutils/*
    tests/*
